--- a/build.xml
+++ b/build.xml
@@ -32,12 +32,13 @@
         
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${build.classes}"/>
-        <javac deprecation="on" destdir="${build.classes}" debug="on">
+        <javac deprecation="on" destdir="${build.classes}" debug="on" >
             <src>
                 <pathelement location="srcController"/>
                 <pathelement location="srcModel"/>
                 <pathelement location="srcUI"/>
                 <pathelement location="resources"/>
+                <pathelement location="fxml"/>
             </src>
             <classpath refid="build-classpath"/>
             
@@ -46,6 +47,9 @@
         <copy todir="${build.classes}">
             <fileset dir="resources">
                 <include name="**/*"/>
+            </fileset>
+            <fileset dir="fxml">
+                <include name="**/*.fxml"/>
             </fileset>
         </copy>
     </target>
@@ -69,11 +73,12 @@
     </target>
     
     <target name="debug" depends="build" description="-->Run the application with the debugger. Need to have a debugger listening on the address ${jpda.address}">
-        <fail unless="jpda.address" message="The property jpda.address must be set"/>
+<!--        <fail unless="jpda.address" message="The property jpda.address must be set"/>
+        <echo>${jpda.address}</echo>-->
         <java classname="${main.class.name}" dir="${build.classes}" fork="true">
             <classpath refid="run-classpath"/>
             <jvmarg value="-Xdebug"/>
-            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
+            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=localhost:44708"/>
         </java>    
     </target>
     
