--- a/build.xml
+++ b/build.xml
@@ -34,21 +34,21 @@
         <mkdir dir="${build.classes}"/>
         <javac deprecation="on" destdir="${build.classes}" debug="on" >
             <src>
-                <pathelement location="srcController"/>
-                <pathelement location="srcModel"/>
-                <pathelement location="srcUI"/>
-                <pathelement location="resources"/>
-                <pathelement location="fxml"/>
+                <pathelement location="main/java/srcController"/>
+                <pathelement location="main/java/srcModel"/>
+                <pathelement location="main/java/srcUI"/>
+                <pathelement location="main/resources"/>
+                <pathelement location="main/fxml"/>
             </src>
             <classpath refid="build-classpath"/>
             
             <compilerarg value="-Xlint:unchecked"/>
         </javac>
         <copy todir="${build.classes}">
-            <fileset dir="resources">
+            <fileset dir="main/resources">
                 <include name="**/*"/>
             </fileset>
-            <fileset dir="fxml">
+            <fileset dir="main/fxml">
                 <include name="**/*.fxml"/>
             </fileset>
         </copy>
