--- a/ivy.xml
+++ b/ivy.xml
@@ -10,7 +10,6 @@
         <dependency org="org.springframework" name="spring-core" rev="3.1.1.RELEASE" conf="runtime->default"/>
         <dependency org="org.springframework" name="spring-beans" rev="3.1.1.RELEASE" conf="runtime->default"/>
         <dependency org="org.springframework" name="spring-context" rev="3.1.1.RELEASE" conf="runtime->default"/>
-        
-            
+        <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
