--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /target/
 /lib/
 /nbproject/
+/main/fxml/com/newdawn/gui/economic/ColonyEconomicScreen.fxml.bak
+/main/fxml/com/newdawn/gui/economic/EconomicScreen.fxml.bak
+/main/fxml/com/newdawn/gui/MainScreen.fxml.bak
