--- a/ivy.xml
+++ b/ivy.xml
@@ -7,9 +7,9 @@
         <conf name="test" extends="build"/>
     </configurations>
     <dependencies>
-        <dependency org="org.springframework" name="spring-core" rev="3.1.2.RELEASE" conf="runtime->default"/>
-        <dependency org="org.springframework" name="spring-beans" rev="3.1.2.RELEASE" conf="runtime->default"/>
-        <dependency org="org.springframework" name="spring-context" rev="3.1.2.RELEASE" conf="runtime->default"/>
+        <dependency org="org.springframework" name="spring-core" rev="3.1.2.RELEASE" conf="runtime->default, javadoc"/>
+        <dependency org="org.springframework" name="spring-beans" rev="3.1.2.RELEASE" conf="runtime->default, javadoc"/>
+        <dependency org="org.springframework" name="spring-context" rev="3.1.2.RELEASE" conf="runtime->default, javadoc"/>
         <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
