--- a/build.xml
+++ b/build.xml
@@ -80,7 +80,7 @@
         <java classname="${main.class.name}" dir="${build.classes}" fork="true">
             <classpath refid="run-classpath"/>
             <jvmarg value="-Xdebug"/>
-            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=localhost:44708"/>
+            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=44708,server=y,suspend=y"/>
         </java>    
     </target>
     
