--- a/ivy.xml
+++ b/ivy.xml
@@ -8,9 +8,9 @@
         <conf name="test" extends="build"/>
     </configurations>
     <dependencies>
-        <dependency org="org.springframework" name="spring-core" rev="3.2.2.RELEASE" conf="runtime->default, javadoc"/>
-        <dependency org="org.springframework" name="spring-beans" rev="3.2.2.RELEASE" conf="runtime->default, javadoc"/>
-        <dependency org="org.springframework" name="spring-context" rev="3.2.2.RELEASE" conf="runtime->default, javadoc"/>
+        <dependency org="org.springframework" name="spring-core" rev="4.0.0.M1" conf="runtime->default, javadoc"/>
+        <dependency org="org.springframework" name="spring-beans" rev="4.0.0.M1" conf="runtime->default, javadoc"/>
+        <dependency org="org.springframework" name="spring-context" rev="4.0.0.M1" conf="runtime->default, javadoc"/>
         <dependency org="commons-logging" name="commons-logging" rev="1.1.1" conf="runtime->default, javadoc"/>
         <dependency org="junit" name="junit" rev="4.10" conf="test->default, javadoc" />
     </dependencies>
