--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,14 @@ repositories {
 
 dependencies {
     def springVersion = "4.1.3.RELEASE"
+    def logbackVersion = '1.1.2'
     compile "org.springframework:spring-core:" + springVersion
     compile "org.springframework:spring-context:" + springVersion
     compile "org.springframework:spring-beans:" + springVersion
     compile "org.simpleframework:simple-xml:2.7"
-    compile "commons-logging:commons-logging:1.1.1"
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'ch.qos.logback:logback-core:' + logbackVersion
+    compile 'ch.qos.logback:logback-classic:' + logbackVersion
     testCompile  "junit:junit:4.10"
 }
 
