--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.7'
     compile 'ch.qos.logback:logback-core:' + logbackVersion
     compile 'ch.qos.logback:logback-classic:' + logbackVersion
+    compile 'org.apache.commons:commons-collections4:4.0'
+
     testCompile  "junit:junit:4.10"
 }
 
